fix: 修复悬浮字配置往返、页面动作与可见性处理
Co-authored-by: aider (openai/gpt-5.6-sol) <aider@aider.chat>